# cargo-action-fmt

./: .editorconfig  .gitattributes  .rustfmt.toml  Cargo.toml  Justfile  LICENSE  README.md  action.yml  deny.toml  justfile  rust-toolchain.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: check.yml  deps.yml  lint.yml  release-action.yml  release-crate.yml  release.yml  rustsec.yml  toolchain.yml
setup/: action.yml
src/: main.rs  messages.rs
