[package]
name = "cargo-action-fmt"
version = "1.0.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/olix0r/cargo-action-fmt"
description = """
Converts cargo check (and clippy) JSON output to the GitHub Action error format
"""

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dependencies.clap]
version = "3"
default-features = false
features = ["derive", "std"]
